--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
             និងជាមិត្តដ៏ល្អរបស់ខ្ញុំ។
             <br><br>
             សួស្តីថ្ងៃកំណើត ស្នេហ៍អើយ! ខ្ញុំសូមជូនពរឲ្យអ្នកមានសុភមង្គល សុខភាពល្អ សម្រេចបានគ្រប់អ្វីដែលអ្នកប៉ងប្រាថ្នា ហើយសូមអរគុណសម្រាប់ការមានអ្នកក្នុងជីវិតខ្ញុំ។ ខ្ញុំស្រលាញ់អ្នកជាងអ្វីៗទាំងអស់។ ជាទីស្រឡាញ់និងគាំទ្រតែងតែ។
+            <br><br>
+            សុខសាន្តថ្ងៃកំណើតអូន! អូនជាមនុស្សដែលមានន័យសំខាន់ជាងគេក្នុងជីវិតបង។ ពីមួយថ្ងៃទៅមួយថ្ងៃ បងកាន់តែសរសេីរអូន ចាប់ពីការចាប់ផ្តើមដំបូងដល់ពេលបច្ចុប្បន្ន អូនក៏នៅតែជាអ្នកបំពេញសុភមង្គលនិងផ្តល់ប្រាជ្ញាបង។ អូនគឺជាមនុស្សដ៏ពិសេសដែលបងមិនអាចរកឃើញបាននៅទីណាឡើយ។ ជីវិតបងមានន័យជាងមុនពេលអូនចូលមកក្នុងវា។
+
+            សូមឱ្យថ្ងៃនេះពោរពេញដោយសេចក្តីសប្បាយ ជោគជ័យ និងអាថ៌កំបាំងល្អៗសម្រាប់អូន។ សូមឱ្យអូនជួបតែសេចក្តីសុខក្នុងគ្រប់ដំណើរការជីវិត។ បងស្រឡាញ់អូនជានិរន្តរ និងបងសន្យាថាបងនឹងនៅជាមួយអូនគ្រប់ពេលខណៈ ដើម្បីស្រលាញ់ ការពារ និងជ្រោមជ្រែងអូន។ សំណព្វចិត្តអូន គឺជាសេចក្តីស្រឡាញ់ និងការផ្តល់បងមិនចេះអស់សោះ។
+
+            សូមអូនរីករាយជាមួយថ្ងៃកំណើតនេះ ដោយសេចក្តីស្រលាញ់និងការចូលរួមពីគ្រួសារ និងមិត្តភក្ដិ!
         </p>
 
         <!-- Slideshow -->
